Deploy megamenu gap fix

--- a/src/styles/components/_megamenu.scss
+++ b/src/styles/components/_megamenu.scss
@@ -4,147 +4,149 @@
 @use '../utils/functions' as fn;
 
 .megamenu {
+  display: none;
+  position: absolute;
+  width: 100%;
+  background-color: var(--clr-dark);
+  font-family: 'Poppins';
+  margin-block: 40px;
+  padding-bottom: 40px;
+  // z-index: 1000;
+
+  @media (max-width: vars.$lg) {
     display: none;
-    position: absolute;
-    width: 100%;
-    background-color: var(--clr-dark);
-    font-family: "Poppins";
-    margin-block: 40px;
-    padding-bottom: 40px;
-    // z-index: 1000;
+  }
 
-    @media(max-width: vars.$lg) {
-        display: none;
-    }
+  &.active {
+    display: block;
+  }
 
-    &.active {
-        display: block;
-    }
+  &__container {
+    &-product {
+      display: none;
 
-    &__container {
+      &__list {
+        display: flex;
+        gap: 72px;
 
-        &-product {
-            display: none;
-
-            &__list {
-                display: flex;
-                gap: 72px;
-
-                @media (max-width: vars.$xxl) {
-                    gap: 56px;
-                }
-
-                @media (max-width: vars.$xl) {
-                    gap: 40px;
-                }
-
-                &__item {
-
-                    padding-block: 30px;
-
-                    @media (max-width: vars.$xl) {
-                        padding-block: 20px;
-                    }
-
-                    &:first-of-type {
-                        border-radius: 20px;
-                        padding-inline: 30px;
-                        border: 1px solid rgba(108, 234, 189, 0.60);
-                        height: 160px;
-
-                        @media (max-width: vars.$xxl) {
-                            padding-inline: 10px;
-                        }
-
-                        @media (max-width: vars.$xl) {
-                            padding-inline: 6px;
-                        }
-                    }
-
-                    &__links {
-                        display: flex;
-                        flex-direction: column;
-                        gap: 8px;
-                    }
-
-                    &__title {
-                        color: var(--clr-white);
-                        font-size: 16px;
-                        font-weight: 400;
-                        line-height: 24px;
-                        letter-spacing: 0.16px;
-                        margin-bottom: 20px;
-
-                        @media (max-width: vars.$xl) {
-                            font-size: 14px;
-                        }
-                    }
-                }
-            }
-
-            &__link {
-                color: var(--clr-light);
-                font-size: 16px;
-                font-weight: 400;
-                line-height: 24px;
-                letter-spacing: 0.16px;
-
-                @media (max-width: vars.$xl) {
-                    font-size: 14px;
-                }
-
-                &:hover {
-                    color: var(--clr-white);
-                }
-            }
+        @media (max-width: vars.$xxl) {
+          gap: 56px;
         }
 
-        &-industry {
-            display: none;
-
-            &__list {
-                display: flex;
-                gap: 20px;
-
-                &__item {
-                    width: 25%;
-                    display: flex;
-                    flex-direction: column;
-                    gap: 20px;
-
-                    &-title {
-                        color: var(--clr-white);
-                        font-size: 16px;
-                        font-weight: 400;
-                        line-height: 24px;
-                        letter-spacing: 0.16px;
-                    }
-                }
-            }
+        @media (max-width: vars.$xl) {
+          gap: 40px;
         }
 
-        &-news {
+        &__item {
+          padding-block: 30px;
 
-            display: none;
+          @media (max-width: vars.$xl) {
+            padding-block: 20px;
+          }
 
-            &__list {
-                display: flex;
-                gap: 20px;
+          &:first-of-type {
+            border-radius: 20px;
+            padding-inline: 30px;
+            border: 1px solid rgba(108, 234, 189, 0.6);
+            height: 160px;
 
-                &__item {
-                    display: flex;
-                    flex-direction: column;
-                    gap: 20px;
-
-                    &-title {
-                        color: var(--clr-white);
-                        font-size: 16px;
-                        font-weight: 400;
-                        line-height: 24px;
-                        letter-spacing: 0.16px;
-                    }
-                }
+            @media (max-width: vars.$xxl) {
+              padding-inline: 10px;
             }
+
+            @media (max-width: vars.$xl) {
+              padding-inline: 6px;
+            }
+          }
+
+          &__links {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+          }
+
+          &__title {
+            color: var(--clr-white);
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 24px;
+            letter-spacing: 0.16px;
+            margin-bottom: 20px;
+
+            @media (max-width: vars.$xl) {
+              font-size: 14px;
+            }
+          }
         }
+      }
+
+      &__link {
+        color: var(--clr-light);
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0.16px;
+
+        @media (max-width: vars.$xl) {
+          font-size: 14px;
+        }
+
+        &:hover {
+          color: var(--clr-white);
+        }
+      }
     }
+
+    &-industry {
+      display: none;
+
+      &__list {
+        display: flex;
+        gap: 20px;
+
+        &__item {
+          width: 25%;
+
+          & > a {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+          }
+
+          &-title {
+            color: var(--clr-white);
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 24px;
+            letter-spacing: 0.16px;
+          }
+        }
+      }
+    }
+
+    &-news {
+      display: none;
+
+      &__list {
+        display: flex;
+        gap: 20px;
+
+        &__item {
+          & > a {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+          }
+
+          &-title {
+            color: var(--clr-white);
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 24px;
+            letter-spacing: 0.16px;
+          }
+        }
+      }
+    }
+  }
 }
